fix overflow

--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 
 #to-sidebar, #to-left {
     height: 100%;
-    position: fixed; 
+    position: fixed;
     top: 0;
     bottom: 0;
 }
@@ -40,6 +40,10 @@ body {
 #to-sidebar-info, #to-sidebar h2, #to-sidebar th {
     cursor: default;
     -webkit-user-select: none;
+    overflow: hidden;
+    height: 45px;
+    background-color: #d64141;
+    text-overflow: ellipsis;
 }
 
 #to-weather-icon {
@@ -53,7 +57,6 @@ body {
     height: 45px;
     min-width: 29px;
     line-height: 65px;
-    
     background: #b52b2b no-repeat center -4px;
     background-size: 85%;
 }
